# resumeVC

./: .gitignore  README.md  package.json
client/: .env.example  bunfig.toml  matchers.d.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.e2e.json  vite.config.ts
client/e2e/: auth.spec.ts  categories.spec.ts  signedIn.spec.ts  signedOut.spec.ts
client/src/: App.tsx  main.tsx  router.tsx
client/src/components/ui/: Layout.tsx  SignInAlert.tsx
client/src/lib/: onboardingWrapper.tsx  utils.ts
client/src/pages/: Categories.tsx  Categories.tsx.bak  Category.tsx  CollectionView.tsx  Example.tsx  JobAnalysis.tsx  Login.tsx  UploadResume.tsx  UserProfile.tsx
client/test/: dom.test.ts  layout.test.tsx  math.test.ts
frontend/: README.md  package.json
migrations/: 001_create_users_table.sql  002_create_categories_table.sql  003_create_resumes_table.sql  README.md
server/: .env.example  app.py  database.py  jobmatch.py  package.json  pyproject.toml
